--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -145,6 +145,14 @@ ja:
       create: 登録する
       submit: 保存する
       update: 更新する
+    page_entries_info:
+      more_pages:
+        display_entries: "<b>%{total}</b>中の%{entry_name}を表示しています <b>%{first} - %{last}</b>"
+      one_page:
+        display_entries:
+          one: "<b>%{count}</b>レコード表示中です %{entry_name}"
+          other: "<b>%{count}</b>レコード表示中です %{entry_name}"
+          zero: "レコードが見つかりませんでした %{entry_name}"
   number:
     currency:
       format:
@@ -210,3 +218,14 @@ ja:
     share_to_line: Lineでシェアする
     share_to_facebook: Facebookでシェアする
     share_to_twitter: Twitterでシェアする
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      next: "次 &rsaquo;"
+      previous: "&lsaquo; 前"
+      truncate: "&hellip;"
+  utilities:
+    all_posts: 記事一覧
+    per: 表示件数
+    none: なし
