create Setting and recent_articles

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -232,6 +232,7 @@ ja:
   utilities:
     your_name: お名前
     all_posts: 記事一覧
+    recent_popular_posts: 最近人気の記事
     table_of_content: 目次
     posted_date: 投稿日
     updated_date: 更新日
