--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -8,6 +8,7 @@ ja:
       profile: プロフィール
       tag: タグ
       user: ユーザー
+      contact: お問い合わせ
 
     attributes:
       article:
@@ -36,6 +37,10 @@ ja:
         articles_count: 記事数
       user:
         email: Email
+      contact:
+        name: お名前
+        email: メールアドレス
+        content: お問い合わせ内容
 
   attributes:
     created_at: 作成日時
