--- a/config/locales/views/contacts/ja.yml
+++ b/config/locales/views/contacts/ja.yml
@@ -2,6 +2,10 @@ ja:
   contacts:
     new:
       title: お問い合わせ
-      name: お名前
-      email: メールアドレス
-      content: お問い合わせ内容
+
+    thanks:
+      title: お問い合わせ完了
+      read: お問い合わせありがとうございました
+      content: |
+        内容を拝見し、ご入力頂いたメールアドレス宛にご返信差し上げます。
+        今しばらくお待ち下さいませ。
